<?xml version="1.0"?>
<package format="2">
  <name>toy_map_viewer</name>
  <version>0.0.1</version>
  <description>The toy_map_viewer package</description>

  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rf_tf_broadcaster</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>roslib</build_depend> <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <build_export_depend>roslib</build_export_depend>

  <exec_depend>rf_tf_broadcaster</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>roslib</exec_depend>

  <depend>libopencv-dev</depend>
  <depend>interactive_markers</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>libpcl-all-dev</depend>

</package>